--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: green;
   height: 75px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -26,6 +26,13 @@
 
 .App-link {
   color: #61dafb;
+  margin-left: auto;
+  padding: 10px;
+}
+
+.App-title {
+  color: antiquewhite;
+  padding: 10px;
 }
 
 @keyframes App-logo-spin {
